Background changes based on media queries

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 body * {
   font-family: "inter", sans-serif;
   color: var(--text-color);
+  height: 100vh;
 }
 
 #container {
@@ -174,4 +175,16 @@ footer {
   padding: 24px;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
